--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
+    "@sweetalert/with-react": "^0.1.1",
     "react": "^16.7.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
