--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "workbox-sw": "^3.6.3"
   },
   "name": "minions",
   "version": "1.1.0",
   "main": "index.js",
   "devDependencies": {
-    "cssnano": "^4.1.7",
+    "cssnano": "^4.1.8",
     "gh-pages": "^2.0.1",
     "parcel": "^1.10.3"
   },
